# gpu-usage-waybar

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  dist-workspace.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: amd.rs  clap.rs  drm.rs  formatter.rs  gpu_status.rs  intel.rs  lib.rs  main.rs  nvidia.rs  tx_rx_reader.rs  utils.rs
src/config/: mod.rs  structs.rs
src/drm/: client.rs  device.rs
src/formatter/: fields.rs  mod.rs  units.rs
src/gpu_status/: fields.rs  mod.rs
