[package]
name = "gpu-usage-waybar"
authors = ["PolpOnline"]
version = "0.1.18"
edition = "2021"
description = "A tool to display gpu usage in Waybar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PolpOnline/gpu-usage-waybar"

[dependencies]
amdgpu-sysfs = "0.18.0"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
color-eyre = "0.6.3"
nvml-wrapper = "0.10.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.27.0", features = ["derive"] }

[profile.dev.package.backtrace]
opt-level = 3

# Rust does not inline across crates if link-time optimization (LTO) is off, which it is by default.
[profile.release]
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
