[package]
name = "gpu-usage-waybar"
authors = ["PolpOnline"]
version = "0.1.24"
edition = "2024"
description = "A tool to display gpu usage in Waybar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PolpOnline/gpu-usage-waybar"

[dependencies]
amdgpu-sysfs = "0.19.0"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
color-eyre = "0.6.3"
etcetera = "0.11.0"
nvml-wrapper = "0.11.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
sonic-rs = "0.5.0"
smart-default = "0.7.1"
strum = { version = "0.27.0", features = ["derive"] }
toml = "0.9.0"
procfs = "0.18.0"
byte-unit = "5.2.0"

[profile.dev.package.backtrace]
opt-level = 3

# Rust does not inline across crates if link-time optimization (LTO) is off, which it is by default.
[profile.release]
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[profile.profiling]
inherits = "release"
lto = false
debug = true
