[package]
name = "gpu-usage-waybar"
rust-version = "1.91.1"
authors = ["PolpOnline"]
version = "0.1.26"
edition = "2024"
description = "A tool to display gpu usage in Waybar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PolpOnline/gpu-usage-waybar"

[dependencies]
amdgpu-sysfs = "0.19"
clap = { version = "4.5", features = ["cargo", "derive"] }
color-eyre = "0.6"
etcetera = "0.11"
nvml-wrapper = "0.12"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5"
smart-default = "0.7.1"
strum = { version = "0.27", features = ["derive"] }
toml = "0.9"
procfs = "0.18.0"

[profile.dev.package.backtrace]
opt-level = 3

# Rust does not inline across crates if link-time optimization (LTO) is off, which it is by default.
[profile.release]
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[profile.profiling]
inherits = "release"
lto = false
debug = true
